<resources>
    <string name="app_name">Story Vibrance</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="Welcome">Welcome</string>
    <string name="onBoard1_title">Welcome to Story Vibrance!</string>
    <string name="onboard1_desc">Embark on a journey of creativity and connection as you dive into the vibrant world of storytelling with our unique platform. We\'re thrilled to have you join us!</string>
    <string name="next">Next</string>
    <string name="onBoard2_title">Unleash Creative Potential</string>
    <string name="onboard2_desc">Explore a variety of features designed to ignite your creativity and bring your stories to life. From captivating visuals to immersive experiences, Story Vibrance offers everything you need to craft compelling narratives.</string>
    <string name="onBoard3_title">Follow a few simple steps</string>
    <string name="onboard3_desc">Sign Up or Log In, Discover Inspiring Content, Create Your First Story, Inspiration at Your Fingertips, Community Connection and finally Personalized Experience</string>
    <string name="get_started">Get Started</string>
    <string name="register">Register</string>
    <string name="register_below">Register Below:</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Have an Account?</string>
    <string name="login_below">Login Below:</string>
    <string name="not_registered_yet">Not Registered Yet?</string>
    <string name="add_story">Add Story</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_profile">Profile</string>
    <string name="author_name">Author Name</string>
    <string name="username">username</string>
    <string name="post_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer cursus eros aclit. Integer cursus eros ac diam faucibus, et luctus felis fermentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer cursus eros ac diam faucibus, et luctus felis fermentum.</string>
    <string name="likeCount">100</string>
    <string name="commentCount">50</string>
    <string name="comments">Comments</string>
    <string name="read_more">Read more</string>
    <string name="forget_password">Forget Password?</string>
    <string name="email_address">Input Your Email Address</string>
    <string name="forget_link_send_btn">Send</string>
    <string name="pass_reset_link_sent">A password reset link will be sent to your registered email.</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="about_me">Write your bio here</string>
    <string name="update_profile">Update Profile</string>
    <string name="update">Update</string>
    <string name="saved_post">Saved Post</string>
    <string name="saved_post_empty">You haven\'t saved any posts yet! Go back and start saving.</string>
    <string name="don_t_have_any_friend">You don\'t have any friend yet. Make One?</string>
</resources>