<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_stand"
        tools:context=".auth.SignupActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:id="@+id/signupWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:src="@mipmap/ic_launcher_round" />

                    <TextView
                        style="@style/TextAppearance.Headline1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register_below"
                        android:textAlignment="center" />

                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/nameEdTxt"
                        style="@style/AppEditTextStyle"
                        android:autofillHints=""
                        android:drawableStart="@drawable/edit_person"
                        android:hint="@string/full_name"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/usernameEdTxt"
                        style="@style/AppEditTextStyle"
                        android:autofillHints=""
                        android:drawableStart="@drawable/edit_email"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/passEdTxt"
                        style="@style/AppEditTextStyle"
                        android:autofillHints=""
                        android:drawableStart="@drawable/edit_password"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/signupBtn"
                        style="@style/AppButtonStyle"
                        android:layout_marginTop="@dimen/margin_v_large"
                        android:text="@string/sign_up" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextAppearance.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_small"
                            android:text="@string/already_have_an_account" />

                        <TextView
                            android:id="@+id/loginTextBtn"
                            style="@style/TextAppearance.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            android:textColor="@color/primaryColor" />

                    </LinearLayout>

                </LinearLayout>


                <!-- Loading indicator -->
                <ProgressBar
                    android:id="@+id/loadingIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

            </RelativeLayout>
        </ScrollView>
    </LinearLayout>


</layout>