<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.ForgetPassActivity"
        android:padding="@dimen/padding_medium"
        android:gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/loginWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:src="@mipmap/ic_launcher_round" />

                    <TextView
                        style="@style/TextAppearance.Headline1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_address"
                        android:textAlignment="center" />
                    <TextView
                        style="@style/TextAppearance.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pass_reset_link_sent"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:textAlignment="center" />


                    <EditText
                        android:id="@+id/emailEdTxt"
                        style="@style/AppEditTextStyle"
                        android:autofillHints=""
                        android:drawableStart="@drawable/edit_email"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/sendEmail"
                        style="@style/AppButtonStyle"
                        android:layout_marginTop="@dimen/margin_v_large"
                        android:text="@string/forget_link_send_btn" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextAppearance.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_small"
                            android:text="@string/already_have_an_account" />

                        <TextView
                            android:id="@+id/signTxtBtn"
                            style="@style/TextAppearance.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            android:textColor="@color/primaryColor" />

                    </LinearLayout>

                </LinearLayout>


                <!-- Loading indicator -->
                <ProgressBar
                    android:id="@+id/loadingIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />


            </RelativeLayout>

        </ScrollView>

    </LinearLayout>
</layout>