<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/custom_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:contentDescription="@string/edit"
                android:src="@drawable/back_black"
                 />

            <TextView
                style="@style/TextAppearance.Headline1"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:gravity="center"
                android:layout_marginStart="15dp"
                android:text="@string/saved_post"
                android:layout_marginBottom="10dp"
                android:textAlignment="center" />

        </LinearLayout>

        <TextView
            android:id="@+id/noSavedPost"
            android:layout_below="@+id/custom_back"
            style="@style/TextAppearance.Headline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/saved_post_empty"
            android:visibility="gone"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/noSavedPost"
            android:id="@+id/savedPostRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:horizontalSpacing="8dp"
            android:verticalSpacing="8dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/saved_post_layout" />

    </RelativeLayout>
</layout>
